remove references to google maps

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -145,8 +145,8 @@
 <!-- Responsive map script -->
 <script>
 var placeName = "{{.PageContext.LongName}}";
-var Lat = {{.PageContext.Gmaps.Lat}};
-var Lng = {{.PageContext.Gmaps.Lng}};
+var Lat = {{.PageContext.Osm.Lat}};
+var Lng = {{.PageContext.Osm.Lng}};
 </script>
  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
