add head section

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -1,7 +1,10 @@
 {{define "title"}}{{.PageContext.ShortName}} | Candidate Interview Night{{end}}
 
-{{define "content"}}
+{{define "head"}}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{{end}}
+
+{{define "content"}}
 <div class="container-fluid bg-cin-2">
 <div class="container bg-cin bg-cin-space">
     <div class="container container-padded">
