--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -10,6 +10,8 @@
 <meta property="og:description" content="At URY, radio is a two-way medium. Send us a message or find us on social media.">
 <meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}">
 <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/contact/"}}">
+{{end}}
+{{define "head"}}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
