--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -19,6 +19,11 @@
 <meta property="og:description" content="{{ stripHtml .PageData.Podcast.Description}}">
 {{end}}
 
+{{define "head"}}
+<link rel="stylesheet" href='{{url "/css/podcast_player.css"}}'>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500">
+{{end}}
+
 {{define "content"}}
 
 {{with .PageData}}
@@ -87,7 +92,5 @@
   });
 
 </script>
-<link rel="stylesheet" href='{{url "/css/podcast_player.css"}}'>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500">
 {{end}}
 {{end}}
