--- a/views/404.tmpl
+++ b/views/404.tmpl
@@ -2,7 +2,7 @@
 <div class="container container-padded outer page404">
 	<div class="container container-padded">
 		<div>
-			<h1>4 <div class="spinner"></div> 4</h1>
+			<h1 aria-hidden="true">4 <div class="spinner"></div> 4</h1>
 			<h2>Looks like we couldn't find that page. Oops!</h2>
 		</div>
 	</div>
