--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -12,13 +12,23 @@
     {{end}}
     </a>
     <div class="navbar-collapse collapse" id="collapsed">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="{{url "/schedule/thisweek" }}">Schedule</a>
-        <a class="nav-item nav-link" href="{{url "/ontap/"}}">{{.PageContext.ODName}}</a>
-        <a class="nav-item nav-link" href="{{url "/about/"}}">About Us</a>
-        <a class="nav-item nav-link" href="{{url "/getinvolved/"}}">Get Involved</a>
-        <a class="nav-item nav-link" href="{{url "/contact/"}}">Contact Us</a>
-      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{{url "/schedule/thisweek" }}">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url "/ontap/"}}">{{.PageContext.ODName}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url "/about/"}}">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url "/getinvolved/"}}">Get Involved</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url "/contact/"}}">Contact Us</a>
+        </li>
+      </ul>
       <form action="{{url "/search/"}}" class="form-inline ml-auto search-box search-box-expand">
           <button type="submit" class="" alt="Submit"><i class="fa fa-search" aria-hidden="true"></i></button>
           <div class="col px-0">
