--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -29,13 +29,13 @@
     {{range .PageData.LatestTimeslots}}
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
       <a class="ury-card " href="/schedule/shows/timeslots/{{.TimeslotID}}/" title="URY Podcast: {{.Title}}">
-        <div class="ury-card-img" style="background: url('
+        <img class="ury-card-img" src="
             {{- if .Season.ShowMeta.Photo -}}
               {{$.PageContext.FullURL}}{{.Season.ShowMeta.Photo}}
             {{- else -}}
               {{url "/images/default_show_profile.png"}}
-            {{- end -}}');
-          " alt="{{.Title}} Logo"></div>
+            {{- end -}}
+          " alt="{{.Title}} Logo">
         <div class="ury-card-body">
           <div class="ury-card-title">{{.Title}}</div>
           <span class="ury-card-date">{{.StartTime.Format "15:04 - Mon"}} • {{formatDuration .Duration}}</span>
@@ -59,15 +59,14 @@
     {{range .PageData.LatestPodcasts}}
       <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
         <a class="ury-card podcast" href="{{.MicrositeLink.URL}}">
-          <div class="ury-card-img"
-            style="background: url('
+          <img class="ury-card-img"
+            src="
             {{- if .Photo -}}
               {{$.PageContext.FullURL}}{{.Photo}}
             {{- else -}}
               {{url "/images/default_show_profile.png"}}
             {{- end -}}
-            ');" title="URY Podcast: {{.Title}} Logo">
-          </div>
+            " title="URY Podcast: {{.Title}} Logo">
           <div class="ury-card-body">
             <div class="ury-card-title">{{.Title}}</div>
             <span>{{.Time.Format "Monday, _2 Jan 2006"}}</span>
