improve contact page accessibility

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -18,7 +18,7 @@
         <div class="col">
           <hgroup>
             <h1><img class="pageTitleImage" src="/images/AboutUs.svg" alt="About Us"></h1>
-            <h2 class="display-5">Broadcasting since 1968.</h2>
+            <p class="h2">Broadcasting since 1968.</p>
           </hgroup>
           <br>
           <a href="{{url "/getinvolved/#signUp"}}" class="btn btn-primary-inverse btn-xl">Get Involved!</a>
