--- a/views/competitions.tmpl
+++ b/views/competitions.tmpl
@@ -1,18 +1,19 @@
 {{define "title"}}{{.PageContext.ShortName}} | Competitions{{end}}
 {{define "content"}}
+<article>
 <div class="container-fluid banner-2">
   <div class="container">
     <div class="row align-items-center text-center">
-      <div class="col">
+      <hgroup class="col">
         <h1 class="display-3">Competitions</h1>
-        <h2 class="display-4">Terms and Conditions</h2>
-      </div>
+        <p class="display-4">Terms and Conditions</p>
+      </hgroup>
     </div>
   </div>
 </div>
 <div class="container-fluid container-padded bg-off-white" >
-  <div class="container container-sm" style="max-width:1000px">
-    <h1 class="text-center">General Rules</h1>
+  <section class="container container-sm" style="max-width:1000px">
+    <h2 class="text-center">General Rules</h2>
     <p><strong>All competitions run by University Radio York (URY) are governed by the following rules:</strong></p>
     <p>Competitions on URY will be advertised either on air, on our website (ury.org.uk) or via our social media pages. Each competition will detail how to enter the competition, quantities and specifications of prizes, and any further conditions of the competition.</p>
     <ol>
@@ -25,7 +26,7 @@
       <li>Prizes must be collected within 7 days of the competition closing, unless explicitly stated otherwise. There is no cash alternative for any prizes. URY reserves the right to give away any prizes which have not be collected within this period.</li>
     </ol>
     <p>Any further information, questions, or complaints about URY’s competitions must be addressed to the Head of Marketing via email: <a href="mailto:head.of.marketing@ury.org.uk">head.of.marketing@ury.org.uk</a>. Complaints about any competition must be made within 2 weeks of the competition closing. After this time, completion specific terms will be removed from the website.</p>
-  </div>
+  </section>
 </div>
 <!--
 <div class="container-fluid container-padded">
@@ -46,7 +47,8 @@
       <dt>How to enter:</dt>
       <dd>Information on how to enter the competition.</dd>
     <dl>
-    -->
   </div>
 </div>
+-->
+</article>
 {{end}}
