--- a/sass/main.scss
+++ b/sass/main.scss
@@ -57,7 +57,8 @@ footer {
 }
 
 .banner-2 {
-  background: url("/images/bg-banner-2.jpg") center center no-repeat;
+  background: -webkit-image-set(url("/images/bg-banner-2.webp") type("image/webp"), url("/images/bg-banner-2.jpg") type("image/jpeg")) center center no-repeat;
+  background: image-set(url("/images/bg-banner-2.webp") type("image/webp"), url("/images/bg-banner-2.jpg") type("image/jpeg")) center center no-repeat;
   background-size: cover;
   color: $white;
   padding: 5em 0;
@@ -69,7 +70,8 @@ footer {
 }
 
 .drone-banner {
-  background: url("/images/drone-banner.jpg") top center no-repeat;
+  background: -webkit-image-set(url("/images/drone-banner.webp") type("image/webp"), url("/images/drone-banner.jpg") type("image/jpeg")) center center no-repeat;
+  background: image-set(url("/images/drone-banner.webp") type("image/webp"), url("/images/drone-banner.jpg") type("image/jpeg")) center center no-repeat;
   background-size: cover;
   color: $white;
   padding: 10em 0 2.5em 0;
@@ -175,7 +177,8 @@ footer {
 }
 
 .on-demand {
-  background: url("/images/bg-banner-1.jpg") center center no-repeat;
+  background: -webkit-image-set(url("/images/bg-banner-1.webp") type("image/webp"), url("/images/bg-banner-1.jpg") type("image/jpeg")) center center no-repeat;
+  background: image-set(url("/images/bg-banner-1.webp") type("image/webp"), url("/images/bg-banner-1.jpg") type("image/jpeg")) center center no-repeat;
   background-size: cover;
   color: $white;
 
@@ -414,7 +417,8 @@ body {
   max-height: 15rem;
 }
 .teams-banner {
-  background: url("/images/drone-banner.jpg") center center no-repeat;
+  background: -webkit-image-set(url("/images/drone-banner.webp") type("image/webp"), url("/images/drone-banner.jpg") type("image/jpeg")) center center no-repeat;
+  background: image-set(url("/images/drone-banner.webp") type("image/webp"), url("/images/drone-banner.jpg") type("image/jpeg")) center center no-repeat;
   background-size: cover;
   color: $white;
 
