Changed the podcasts page to match styling and improve linking

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -367,6 +367,12 @@ footer {
   overflow: hidden;
 }
 
+// Podcasts list page
+.podcast-list-img {
+  border-radius: 0.4rem;
+  overflow: hidden;
+}
+
 // Styling for responsive map
 .map-container {
   width: 100%;
