--- a/views/podcast.tmpl
+++ b/views/podcast.tmpl
@@ -39,7 +39,7 @@ Podcast {{end}}
 <div class="container-fluid bg-off-white container-padded">
   <div class="container p-3">
     <div class="row">
-      <div class="col-12 col-lg-3">
+      <div class="col-12 col-sm-5 col-lg-3">
         <img class="img-fluid show-img" src='
             {{if .Podcast.Photo}}
               {{$.PageContext.FullURL}}{{.Podcast.Photo}}
@@ -48,7 +48,7 @@ Podcast {{end}}
             {{end}}
           ' alt="{{.Podcast.Title}} Logo">
       </div>
-      <div class="col-12 col-lg-9">
+      <div class="col-12 col-sm-7 col-lg-9">
         <h1>{{.Podcast.Title}}</h1>
         {{if .Podcast.Show}}
         <h3>
