change osm links to gmaps links

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -96,7 +96,7 @@
   <div class="row custom-scrollbar scroll-horiz scroll-none-xl thumbnail-slider">
 
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card " href="https://osm.org/go/evplQUbdm?m=">
+      <a class="ury-card " href="https://maps.app.goo.gl/6BdCP7sb1nPt9L7h6">
         <div class="ury-card-img" style="background: url({{url "/images/welcome_fair.jpg"}})" alt="Gregs Place"></div>
         <div class="ury-card-body">
           <div class="ury-card-title">Welcome Fair</div>
@@ -107,7 +107,7 @@
 
 
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card " href="https://osm.org/go/evplQWUS_?m=">
+      <a class="ury-card " href="https://maps.app.goo.gl/KVogp1cw5KaXr6Zi7">
         <div class="ury-card-img" style="background: url({{url "/images/welcome_talk.jpg"}})" alt="Gregs Place"></div>
         <div class="ury-card-body">
           <div class="ury-card-title">Welcome Talk</div>
@@ -118,7 +118,7 @@
 
 
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card " href="https://osm.org/go/evplQVbf7?m=">
+      <a class="ury-card " href="https://maps.app.goo.gl/QRDgFLRdy9xyjXKt5">
         <div class="ury-card-img" style="background: url({{url "/images/open_station.png"}})" alt="Gregs Place"></div>
         <div class="ury-card-body">
           <div class="ury-card-title">Open Station</div>
@@ -129,7 +129,7 @@
 
 
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card " href="https://osm.org/go/evpP3LS2Z-?m=&node=4678507473">
+      <a class="ury-card " href="https://maps.app.goo.gl/ztBXcAEP1tAZSsbL8">
         <div class="ury-card-img" style="background: url({{url "/images/bar.png"}})" alt="Gregs Place"></div>
         <div class="ury-card-body">
           <div class="ury-card-title">Combined Media Social</div>
@@ -139,13 +139,13 @@
     </div>
 
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <div class="ury-card " >
+      <a class="ury-card " href="https://maps.app.goo.gl/KVogp1cw5KaXr6Zi7">
         <div class="ury-card-img" style="background: url({{url "/images/station_meeting.jpg"}})" alt="Gregs Place"></div>
         <div class="ury-card-body">
           <div class="ury-card-title">Station Meeting</div>
           <span class="ury-card-date">Every Mon 19:00-20:00 • V/N/123A </span>
         </div>
-      </div>
+      </a>
     </div>
 
 
